<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:background="@color/pink"
  >
	<TextView 
		android:text="@string/userback" 
		android:id="@+id/userback" 
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:gravity="center"
		android:textStyle="bold"
		android:textSize="25dip"
		android:layout_marginTop="20dip"
		android:textColor="@color/black"
		>
	</TextView>
	<TextView 
		android:text="@string/welcomecontent" 
		android:id="@+id/welcomecontent" 
		android:layout_width="300dip" 
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dip"
		android:textColor="@color/black"
		>
	</TextView>
	<EditText 
		android:text="" 
		android:id="@+id/EditText01" 
		android:layout_width="300dip" 
		android:layout_height="270dip"
		android:layout_marginLeft="10dip"
		android:gravity="top"
		android:hint="@string/inputjianyi"
		>
	</EditText>
	
	<Button 
		android:text="@string/submit" 
		android:id="@+id/submit" 
		android:layout_width="300dip" 
		android:layout_height="50dip"
		android:layout_marginTop="10dip"
		android:layout_marginLeft="10dip"
		android:textSize="20dip"
		>
	</Button>
	<Button 
		android:text="@string/cancel" 
		android:id="@+id/cancel" 
		android:layout_width="300dip" 
		android:layout_height="50dip"
		android:layout_marginLeft="10dip"
		android:layout_marginTop="10dip"
		android:textSize="20dip"
		>
	</Button>
</LinearLayout>
