<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  >
  <LinearLayout 
	android:id="@+id/LinearLayout01" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	>
		<ScrollView 
			android:id="@+id/ScrollView01" 
			android:layout_width="fill_parent"
			android:layout_height="400dip"
			>
			<EditText 
				android:text="" 
				android:id="@+id/EditText01" 
				android:layout_width="fill_parent"
				android:layout_height="400dip"
				android:singleLine="false"
				android:editable="false"
				android:background="@color/black"
				android:textColor="@color/white"
				>
			</EditText>
			
		</ScrollView>
  </LinearLayout>
  <LinearLayout 
  	android:id="@+id/LinearLayout02" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	>
		<Button 
			android:text="@string/bd_lchapter" 
			android:id="@+id/bd_lchapter" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			>
		</Button>
		<Button 
			android:text="@string/bd_lpage" 
			android:id="@+id/bd_lpage" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			>
		</Button>
		<Button 
			android:text="@string/bd_npage" 
			android:id="@+id/bd_npage" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			>
		</Button>
		<Button 
			android:text="@string/bd_nchapter" 
			android:id="@+id/bd_nchapter" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			>
		</Button>
		
  </LinearLayout>

</LinearLayout>
