<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  >
  	<LinearLayout 
		android:id="@+id/LinearLayout01" 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="@drawable/line"
		>
		<Button 
			android:text="@string/back" 
			android:id="@+id/back" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:background="@drawable/myselector_back"
			android:layout_marginLeft="10dip"
			android:textColor="@color/white"
			android:gravity="center"
			android:layout_gravity="center"
			>
		</Button>
		<TextView 
			android:text="@string/tiqianhuankuan" 
			android:id="@+id/tqhk" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_marginLeft="35dip"
			android:textSize="20dip"
			android:layout_gravity="center"
			>
		</TextView>
		<Button 
			android:text="@string/jisuan" 
			android:id="@+id/jscal" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_marginLeft="35dip"
			android:background="@drawable/myselector_cal"
			android:textColor="@color/white"
			android:gravity="center"
			android:layout_gravity="center"
			>
		</Button>
		
	</LinearLayout>
	<LinearLayout 
		android:id="@+id/LinearLayout02" 
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:background="@drawable/cal_bg2"
		>
		<LinearLayout 
			android:id="@+id/LinearLayout03" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			>
			<TextView 
				android:text="@string/oloadtype" 
				android:id="@+id/oloadtype" 
				android:layout_width="wrap_content" 
				android:layout_height="50dip"
				android:layout_marginLeft="25dip"
				android:layout_marginTop="20dip"
				android:textColor="@color/black"
				android:gravity="center"
				android:layout_gravity="center"
				android:textStyle="bold"
				android:textSize="16dip"
				>
			</TextView>
			<Button 
				android:text="@string/strB" 
				android:id="@+id/ydkleix" 
				android:layout_width="110dip" 
				android:layout_height="35dip"
				android:layout_marginLeft="80dip"
				android:layout_marginTop="20dip"
				android:layout_gravity="center"
				android:background="@drawable/text"
				android:gravity="center"
				>
			</Button>
		</LinearLayout>
		<LinearLayout 
			android:id="@+id/LinearLayout04" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			>
			<TextView 
				android:text="@string/opaytype" 
				android:id="@+id/opaytype" 
				android:layout_width="wrap_content" 
				android:layout_height="50dip"
				android:layout_marginLeft="25dip"
				android:layout_marginTop="1dip"
				android:textColor="@color/black"
				android:gravity="center"
				android:layout_gravity="center"
				android:textStyle="bold"
				android:textSize="16dip"
				>
			</TextView>
			<Button 
				android:text="@string/debx" 
				android:id="@+id/ydkmode" 
				android:layout_width="110dip" 
				android:layout_height="35dip"
				android:layout_marginLeft="80dip"
				android:layout_marginTop="1dip"
				android:layout_gravity="center"
				android:background="@drawable/text"
				android:gravity="center"
				>
			</Button>
		</LinearLayout>
		<LinearLayout 
			android:id="@+id/LinearLayout05" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			>
			<TextView 
				android:text="@string/oloadamt" 
				android:id="@+id/oloadamt" 
				android:layout_width="wrap_content" 
				android:layout_height="50dip"
				android:layout_marginLeft="25dip"
				android:layout_marginTop="1dip"
				android:textColor="@color/black"
				android:gravity="center"
				android:layout_gravity="center"
				android:textStyle="bold"
				android:textSize="16dip"
				>
			</TextView>
			<Button 
				android:text="0.0" 
				android:id="@+id/jineid" 
				android:layout_width="55dip" 
				android:layout_height="35dip"
				android:layout_marginLeft="80dip"
				android:layout_marginTop="1dip"
				android:layout_gravity="center"
				android:background="@drawable/text"
				android:gravity="center"
				>
			</Button>
			<Button 
				android:text="万元" 
				android:id="@+id/wanyuan" 
				android:layout_width="55dip" 
				android:layout_height="35dip"
				android:layout_marginLeft="1dip"
				android:layout_marginTop="1dip"
				android:layout_gravity="center"
				android:background="@drawable/text"
				android:gravity="center"
				>
			</Button>
		</LinearLayout>
		<LinearLayout 
			android:id="@+id/LinearLayout06" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			>
			<TextView 
				android:text="@string/omonth" 
				android:id="@+id/omonth" 
				android:layout_width="wrap_content" 
				android:layout_height="50dip"
				android:layout_marginLeft="25dip"
				android:layout_marginTop="1dip"
				android:textColor="@color/black"
				android:gravity="center"
				android:layout_gravity="center"
				android:textStyle="bold"
				android:textSize="16dip"
				>
			</TextView>
			<Button 
				android:text="20年" 
				android:id="@+id/nian" 
				android:layout_width="55dip" 
				android:layout_height="35dip"
				android:layout_marginLeft="80dip"
				android:layout_marginTop="1dip"
				android:layout_gravity="center"
				android:background="@drawable/text"
				android:gravity="center"
				>
			</Button>
			<Button 
				android:text="0月" 
				android:id="@+id/yue" 
				android:layout_width="55dip" 
				android:layout_height="35dip"
				android:layout_marginLeft="5dip"
				android:layout_marginTop="1dip"
				android:layout_gravity="center"
				android:background="@drawable/text"
				android:gravity="center"
				>
			</Button>
		</LinearLayout>
		<LinearLayout 
			android:id="@+id/LinearLayout07" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			>
			<TextView 
				android:text="@string/strBrate" 
				android:id="@+id/strBrate" 
				android:layout_width="wrap_content" 
				android:layout_height="50dip"
				android:layout_marginLeft="25dip"
				android:layout_marginTop="1dip"
				android:textColor="@color/black"
				android:gravity="center"
				android:layout_gravity="center"
				android:textStyle="bold"
				android:textSize="16dip"
				>
			</TextView>
			<Button 
				android:text="@string/shuru" 
				android:id="@+id/shuru" 
				android:layout_width="110dip" 
				android:layout_height="35dip"
				android:layout_marginLeft="65dip"
				android:layout_marginTop="1dip"
				android:layout_gravity="center"
				android:background="@drawable/text"
				android:gravity="center"
				>
			</Button>
		</LinearLayout>
		<LinearLayout 
			android:id="@+id/LinearLayout08" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			>
			<Button 
				android:text="0.0" 
				android:id="@+id/lilv" 
				android:layout_width="55dip" 
				android:layout_height="35dip"
				android:layout_marginLeft="185dip"
				android:layout_marginTop="1dip"
				android:layout_gravity="center"
				android:background="@drawable/text"
				android:gravity="center"
				>
			</Button>
			<Button 
				android:text="%" 
				android:id="@+id/bfh" 
				android:layout_width="55dip" 
				android:layout_height="35dip"
				android:layout_marginLeft="1dip"
				android:layout_marginTop="1dip"
				android:layout_gravity="center"
				android:background="@drawable/text"
				android:gravity="center"
				>
			</Button>
		</LinearLayout>
		<LinearLayout 
			android:id="@+id/LinearLayout09" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			>
			<TextView 
				android:text="@string/firstyear" 
				android:id="@+id/firstyear" 
				android:layout_width="wrap_content" 
				android:layout_height="50dip"
				android:layout_marginLeft="25dip"
				android:layout_marginTop="1dip"
				android:textColor="@color/black"
				android:gravity="center"
				android:layout_gravity="center"
				android:textStyle="bold"
				android:textSize="16dip"
				>
			</TextView>
			<Button 
				android:text="@string/hktime" 
				android:id="@+id/hktime" 
				android:layout_width="110dip" 
				android:layout_height="35dip"
				android:layout_marginLeft="50dip"
				android:layout_marginTop="1dip"
				android:layout_gravity="center"
				android:background="@drawable/text"
				android:gravity="center"
				>
			</Button>
		</LinearLayout>
		<LinearLayout 
			android:id="@+id/LinearLayout10" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			>
			<TextView 
				android:text="@string/earlyyear" 
				android:id="@+id/earlyyear" 
				android:layout_width="wrap_content" 
				android:layout_height="50dip"
				android:layout_marginLeft="25dip"
				android:layout_marginTop="1dip"
				android:textColor="@color/black"
				android:gravity="center"
				android:layout_gravity="center"
				android:textStyle="bold"
				android:textSize="16dip"
				>
			</TextView>
			<Button 
				android:text="@string/tqhktime" 
				android:id="@+id/tqhktime" 
				android:layout_width="110dip" 
				android:layout_height="35dip"
				android:layout_marginLeft="35dip"
				android:layout_marginTop="1dip"
				android:layout_gravity="center"
				android:background="@drawable/text"
				android:gravity="center"
				>
			</Button>
		</LinearLayout>
	</LinearLayout>

</LinearLayout>
