<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:background="@drawable/cal_bg"
  >
  
	<LinearLayout 
		android:id="@+id/LinearLayout01" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		>
		<Button 
			android:text="@string/fangdailei" 
			android:id="@+id/fdl" 
			android:gravity="center"
			android:layout_width="80dip" 
			android:layout_height="40dip"
			android:layout_marginLeft="20dip"
			android:layout_marginTop="90dip"
			android:background="@color/touming"
			>
		</Button>
		<ImageView 
			android:id="@+id/img_house"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:background="@drawable/img_house"
			android:layout_marginLeft="150dip"
			android:layout_marginTop="90dip"
			>
		</ImageView>
	</LinearLayout>
	
	
	<LinearLayout 
		android:id="@+id/LinearLayout02" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		>
		<ImageView 
			android:id="@+id/img_moji"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:background="@drawable/img_moji"
			android:layout_marginLeft="20dip"
			
			>
		</ImageView>
	</LinearLayout>
	
	<LinearLayout 
		android:id="@+id/LinearLayout03" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		>
		<Button 
			android:text="@string/fangdai" 
			android:id="@+id/fd" 
			android:gravity="center"
			android:layout_width="80dip" 
			android:layout_height="40dip"
			android:layout_marginLeft="55dip"
			android:layout_marginTop="20dip"
			android:background="@drawable/myselector"
			>
		</Button>
		<Button 
			android:text="@string/tiqianhuankuan" 
			android:id="@+id/tqhk" 
			android:gravity="center"
			android:layout_width="80dip" 
			android:layout_height="40dip"
			android:layout_marginLeft="50dip"
			android:layout_marginTop="20dip"
			android:background="@drawable/myselector"
			>
		</Button>
		
	</LinearLayout>
	
	<LinearLayout 
		android:id="@+id/LinearLayout04" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		>
		<Button 
			android:text="@string/yinhanglei" 
			android:id="@+id/yhl" 
			android:gravity="center"
			android:layout_width="80dip" 
			android:layout_height="40dip"
			android:layout_marginLeft="20dip"
			android:layout_marginTop="50dip"
			android:background="@color/touming"
			>
		</Button>
		<ImageView 
			android:id="@+id/img_house"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:background="@drawable/img_bank"
			android:layout_marginLeft="150dip"
			android:layout_marginTop="50dip"
			>
		</ImageView>
	</LinearLayout>
	
	<LinearLayout 
		android:id="@+id/LinearLayout05" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		>
		<ImageView 
			android:id="@+id/img_moji"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:background="@drawable/img_moji"
			android:layout_marginLeft="20dip"
			>
		</ImageView>
	</LinearLayout>
	
	<LinearLayout 
		android:id="@+id/LinearLayout06" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		>
		<Button 
			android:text="@string/huoqichuxu" 
			android:id="@+id/hqcx" 
			android:gravity="center"
			android:layout_width="80dip" 
			android:layout_height="40dip"
			android:layout_marginLeft="55dip"
			android:layout_marginTop="20dip"
			android:background="@drawable/myselector"
			>
		</Button>
		<Button 
			android:text="@string/lingcunzhengqu" 
			android:id="@+id/lczq" 
			android:gravity="center"
			android:layout_width="80dip" 
			android:layout_height="40dip"
			android:layout_marginLeft="50dip"
			android:layout_marginTop="20dip"
			android:background="@drawable/myselector"
			>
		</Button>
	</LinearLayout>
	
	<LinearLayout 
		android:id="@+id/LinearLayout07" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		>
		<Button 
			android:text="@string/zhengcunzhengqu" 
			android:id="@+id/zczq" 
			android:gravity="center"
			android:layout_width="80dip" 
			android:layout_height="40dip"
			android:layout_marginLeft="55dip"
			android:layout_marginTop="20dip"
			android:background="@drawable/myselector"
			>
		</Button>
		<Button 
			android:text="@string/zhengcunlingqu" 
			android:id="@+id/zclq" 
			android:gravity="center"
			android:layout_width="80dip" 
			android:layout_height="40dip"
			android:layout_marginLeft="50dip"
			android:layout_marginTop="20dip"
			android:background="@drawable/myselector"
			>
		</Button>
	</LinearLayout>
	

</LinearLayout>
