<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@color/pink"
  android:gravity="center_horizontal"
  android:orientation="vertical"
  >
  <LinearLayout
  android:id="@+id/LinearLayout01"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:background="@drawable/ydg_top_bg">
    <Button
    android:id="@+id/fanhui"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/ydg_back_btn_bg"
    android:text="@string/fanhui"
    android:layout_marginLeft="10dip"
    android:layout_gravity="center_vertical">
    </Button>
    <TextView
    android:text="@string/jizhang"
    android:textSize="22dip"
    android:textColor="@color/white"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="50dip"
    android:layout_gravity="center_vertical">
    </TextView>
  </LinearLayout>
  <LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_marginTop="10dip"
  android:layout_marginLeft="5dip"
  >
  <TextView
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/jine"
  android:textSize="18dip"
  android:textColor="@color/black"
  android:layout_marginLeft="15dip"
  android:layout_marginTop="5dip">
  </TextView>
  <EditText
  android:id="@+id/EditText01"
  android:layout_width="204dip"
  android:layout_height="42dip"
  android:inputType="numberDecimal"
  android:layout_marginLeft="20dip"
  android:layout_marginTop="5dip">
  </EditText>
  </LinearLayout>
  <LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_marginLeft="5dip"
  >
  <LinearLayout
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_marginTop="5dip">
  <TextView
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/sz"
  android:textSize="18dip"
  android:textColor="@color/black"
  android:layout_marginLeft="15dip"
  android:layout_marginTop="14dip"
  >
  </TextView>
  </LinearLayout>
  <LinearLayout
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_marginTop="5dip">
  <Spinner
  android:id="@+id/Spinner01"
  android:layout_width="210dip"
  android:layout_height="42dip"
  android:layout_marginTop="5dip"
  android:layout_marginLeft="17dip"
  >
  </Spinner>
  </LinearLayout>
  </LinearLayout>
  <LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_marginTop="5dip"
  android:layout_marginLeft="5dip"
  >
  <LinearLayout
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
  <TextView
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/kemu"
  android:textSize="18dip"
  android:textColor="@color/black"
  android:layout_marginLeft="15dip"
  android:layout_marginTop="12dip"
  >
  </TextView>
  </LinearLayout>
  <LinearLayout
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
  <Spinner
      android:id="@+id/Spinner02"
      android:layout_width="210dip"
      android:layout_height="42dip"
      android:layout_marginTop="5dip"
      android:layout_marginLeft="15dip"
      >
  </Spinner>
  </LinearLayout>
  </LinearLayout>   
  <LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_marginTop="5dip"
  android:layout_marginLeft="5dip"
  >
  <TextView
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/riqi"
  android:textSize="18dip"
  android:textColor="@color/black"
  android:layout_marginLeft="15dip"
  android:layout_marginTop="5dip">
  </TextView>
  <TextView
  android:id="@+id/TextView02"
  android:layout_width="205dip"
  android:layout_height="34dip"
  android:textSize="18dip"
  android:textColor="@color/gray"
  android:gravity="center_vertical"
  android:layout_marginLeft="18dip"
  android:text=""
  android:background="@drawable/income0"
  android:layout_marginTop="5dip">
  </TextView>
  </LinearLayout>  
  <LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_marginTop="5dip"
  android:layout_marginLeft="5dip"
  >
  <LinearLayout
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
  <TextView
  android:layout_width="wrap_content"
  android:layout_height="42dip"
  android:text="@string/fangshi"
  android:textSize="18dip"
  android:textColor="@color/black"
  android:layout_marginLeft="15dip"
  android:layout_marginTop="20dip"
  >
  </TextView>
  </LinearLayout>
  <LinearLayout
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:gravity="center">
  <Spinner
      android:id="@+id/Spinner03"
      android:layout_width="210dip"
      android:layout_height="42dip"
      android:layout_marginTop="8dip"
      android:layout_marginLeft="15dip"
      android:layout_gravity="center"
      >
  </Spinner>
  </LinearLayout>
  </LinearLayout>  
  <LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_marginLeft="5dip"
  >
  <TextView
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/didian"
  android:textSize="18dip"
  android:textColor="@color/black"
  android:layout_marginLeft="15dip"
  android:layout_marginTop="5dip">
  </TextView>
  <EditText
  android:id="@+id/EditText03"
  android:layout_width="209dip"
  android:layout_height="42dip"
  android:layout_marginLeft="15dip"
  android:layout_marginTop="5dip">
  </EditText>
  </LinearLayout>
  <LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_marginTop="5dip"
  android:layout_marginLeft="5dip"
  >
  <TextView
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/beizhu"
  android:textSize="18dip"
  android:textColor="@color/black"
  android:layout_marginLeft="15dip"
  android:layout_marginTop="35dip">
  </TextView>
  <EditText
  android:id="@+id/EditText02"
  android:layout_width="207dip"
  android:layout_height="90dip"
  android:singleLine="false"
  android:layout_marginLeft="15dip"
  android:layout_marginTop="5dip"
  android:gravity="top">
  </EditText>
  </LinearLayout>
  <LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_marginTop="10dip"
  android:layout_marginLeft="5dip">
  <Button
  android:id="@+id/Button01"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:background="@drawable/ydg_bottom_normal_btn_bg"
  android:text="@string/baocun"
  android:textSize="18dip"
  android:textColor="@color/black"
  android:layout_marginLeft="65dip">
  </Button>
  <Button
  android:id="@+id/Button02"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:background="@drawable/ydg_top_normal_btn_bg2"
  android:text="@string/again"
  android:textSize="18dip"
  android:textColor="@color/black"
  android:layout_marginLeft="25dip">
  </Button>
  </LinearLayout>    
</LinearLayout>