<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="480dip"
  android:layout_height="800dip"
  android:orientation="vertical"
  >
  	<LinearLayout 
		android:id="@+id/LinearLayout01" 
		android:layout_width="480dip" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="@drawable/line"
		>
		<Button 
			android:text="@string/back" 
			android:id="@+id/back" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:background="@drawable/myselector_back"
			android:layout_marginLeft="20dip"
			android:textColor="@color/white"
			android:gravity="center"
			android:layout_gravity="center"
			>
		</Button>
		<TextView 
			android:text="@string/result" 
			android:id="@+id/result" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_marginLeft="50dip"
			android:textSize="20dip"
			android:layout_gravity="center"
			>
		</TextView>
		
		
	</LinearLayout>
	<LinearLayout 
		android:id="@+id/LinearLayout02" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@drawable/cal_bg2"
		>
		
		<TextView 
			android:text="@string/allsaveamt" 
			android:id="@+id/allsaveamt" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dip"
			android:layout_marginTop="60dip"
			android:textColor="@color/black"
			>
		</TextView>
		<Button 
			android:text="0.00" 
			android:id="@+id/Button01" 
			android:layout_width="280dip" 
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dip"
			android:textColor="@color/black"
			android:background="@drawable/text"
			>
		</Button>
		<TextView 
			android:text="@string/taxSum" 
			android:id="@+id/taxSum" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dip"
			android:layout_marginTop="30dip"
			android:textColor="@color/black"
			
			>
		</TextView>
		<Button 
			android:text="0.00" 
			android:id="@+id/Button02" 
			android:layout_width="280dip" 
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dip"
			android:textColor="@color/black"
			android:background="@drawable/text"
			>
		</Button>
		
		<TextView 
			android:text="@string/allamt" 
			android:id="@+id/allamt" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dip"
			android:layout_marginTop="30dip"
			android:textColor="@color/black"
			
			>
		</TextView>
		<Button 
			android:text="0.00" 
			android:id="@+id/Button03" 
			android:layout_width="280dip" 
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dip"
			android:textColor="@color/black"
			android:background="@drawable/text"
			>
		</Button>
		
		
</LinearLayout>

</LinearLayout>
